# linux-memory-manager

./: .gitignore  CMakeLists.txt  README.md
include/: defines.h  macros.h  vm_page_family.h
include/memory_mngr/: mngr.h
src/: CMakeLists.txt
src/internal/: mngr_internal.h  vm_page_family_internal.h
src/mngr/: _create_pages.c  _release_pages.c  _stub.c  create_mngr.c  create_pages.c  init.c  release_mngr.c  release_pages.c  stub.c
src/vm_page_family/: _instantiate.c  instantiate.c  print.c
tests/: CMakeLists.txt  test_create_release.c  test_init.c  test_stub.c  test_vm_instantiate.c
